--- a/add.html
+++ b/add.html
@@ -47,7 +47,7 @@
         </form>
     </div>
     <div class="footer">
-        <p>Sparkling Wateer Hostel. Sparkling water main st. 1000. Caxambu-MG</p>
+        <p>Sparkling Water Hostel. Sparkling water main st. 1000. Caxambu-MG</p>
     </div>
 </body>
 
